fix: Acoordion gap

--- a/src/components/Checkout/checkout.scss
+++ b/src/components/Checkout/checkout.scss
@@ -35,11 +35,6 @@
                 @include tablet {
                     width: 100%;
                 }
-                > form {
-                    &.active {
-                        margin-top: 1rem;
-                    }
-                }
                 > .icon-wrapper {
                     width: 100%;
                     @include flex-model(row, center, flex-start, 10px);
